# infinity

./: pyproject.toml  run_snapshot_stress_test.py
.github/workflows/: tests.yml
example/: alter_table.py  benchmark_plaid_index.py  bmp_index.py  cleanup_example.py  cleanup_example2.py  cleanup_example3.py  cleanup_flush.py  delete_update_data.py  emvb_index.py  export_data.py  fde_search.py  filter_data.py  filter_fulltext_keyword.py  fulltext_search.py  fulltext_search_zh.py  functions.py  hnsw_index.py  hybrid_search.py  import_data.py  ivf_index.py  ivf_mem_index.py  list_db_tables.py  multivector_hnsw_index.py  plaid_index.py  repeat_create_db.py  search_with_limit_offset.py  secondary_index.py  show_node.py  simple_example.py  sparse_vector_search.py  tensor_search.py  vector_search.py
example/ColBERT_reranker_example/: helper.py  test_helper.py
go/: connection_pool.go  infinity.go
go/example/: connection_pool_example.go  example.go
go/tests/: connection_pool_test.go
python/: run_all_test.py
python/benchmark/: generate_queries.py  preprocess_aol_search_log.py  preprocess_aol_search_result.py  preprocess_tantivy_queries.py  run.py
python/infinity_embedded/: __init__.py  common.py  index.py  utils.py
python/infinity_sdk/: prepare_huqie.py
python/parallel_test/: conftest.py  test_chaos.py  test_ddl_and_insert_delete.py  test_ddl_parallel.py  test_index_parallel.py  test_insert_delete_parallel.py  test_insert_delete_update.py  test_insert_parallel.py  test_sdkbase.py
python/restart_test/: conftest.py  infinity_runner.py  restart_util.py  test_alter.py  test_basic.py  test_cleanup.py  test_compact.py  test_database_snapshot_restart.py  test_drop.py  test_fulltext.py  test_insert.py  test_insert_import.py  test_memidx.py  (+4 more)
scripts/: Dockerfile_infinity  download_deps_infinity_builder_ubuntu22.py  timeout_kill.py
tools/: gdb.py  generate_aggregate.py  generate_big.py  generate_big_point_query_test_fastroughfilter.py  generate_big_sparse.py  generate_bvecs.py  generate_compact.py  generate_csr.py  generate_embedding_parquet.py  generate_emvb_test_data.py  generate_emvb_test_data_2.py  generate_fvecs.py  generate_groupby1.py  generate_hnsw_with_delete.py  generate_index_scan.py  generate_large_import.py  generate_limit.py  generate_many_import.py  generate_many_import_drop.py  generate_mem_hnsw.py  generate_multivector_knn_scan.py  generate_multivector_parquet.py  generate_rpc_code.py  generate_sort.py  generate_sparse_parquet.py  generate_tensor_array_parquet.py  generate_tensor_parquet.py  generate_test_parquet.py  generate_top.py  generate_top_varchar.py  generate_unnest.py  generate_varchar_parquet.py  generate_wiki_embedding.py  run_benchmark.py  run_http_api.py  run_parallel_test.py  run_parallel_test_continuous.py  run_pysdk_remote_infinity_test.py  run_pytest_parallel.py  run_pytest_parallel_continuous.py  (+4 more)
(+111 files in other folders)
