[project]
name = "infinity-sdk"
version = "0.7.2"
description = "infinity"
readme = "python/infinity_sdk/README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "sqlglot[rs]>=27.10.0",
    "pydantic>=2.9.0,<3.0.0",
    "thrift>=0.20.0,<1.0.0",
    "setuptools>=78.1.1,<81.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pyarrow>=21.0.0,<23.0.0",
    "polars-lts-cpu>=1.9.0,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "readerwriterlock>=1.0.0,<2.0.0",
    "datrie>=0.8.3,<0.9.0",
    "hanziconv>=0.3.0,<0.4.0",
    "nltk>=3.9.1,<4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0,<10.0.0",
    "tomli>=2.0.2,<3.0.0",
    "psutil>=6.0.0,<8.0.0",
    "docker>=7.1.0,<8.0.0",
    "tomli-w>=1.1.0,<2.0.0",
    "timeout-decorator>=0.5.0,<0.6.0",
]
benchmark = [
    "elasticsearch>=8.13.0,<10.0.0",
    "h5py>=3.11.0,<4.0.0",
    "qdrant_client>=1.9.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python/infinity_sdk"}

[tool.setuptools.packages.find]
where = ["python/infinity_sdk"]

[tool.setuptools.package-data]
infinity = ["huqie.txt", "huqie.txt.trie"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "L0",
    "L1",
    "L2",
    "L3",
    "complex",
    "slow",
    "nightly",
]

filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::ResourceWarning",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
    # "ignore::thrift.transport.TTransport",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[tool.ruff.lint]
ignore = [
    "RUF059",
    "UP031",
    "LOG015",
    "BLE001",
    "TRY002",
    "B006",
    "B023",
    "S110",
    "RUF012",
    "RUF013",
    "B017",
    "C408",
    "TRY201",
    "SIM103",
    "TRY203",
    "SIM115",
    "SIM118",
    "EXE001",
    "PT014",
    "PLW0602",
    "PERF402",
    "PLR1722",
    "PLW1510",
    "SIM102",
    "UP007",
    "FURB132",
    "SIM113",
    "TRY004",
    "B015",
    "DTZ001",
    "PERF102",
    "PLW0127",
    "SIM101",
    "SIM210",
    "UP022",
    "B008",
    "C417",
    "C418",
    "DTZ005",
    "ISC004",
    "N999",
    "PLR0133",
    "RUF015",
    "SIM117",
    "SIM211",
]

[tool.ruff.lint.per-file-ignores]
"python/infinity_embedded/local_infinity/client.py" = ["F403", "F405"]
"python/infinity_embedded/local_infinity/query_builder.py" = ["F403", "F405"]
"python/infinity_embedded/local_infinity/types.py" = ["F403", "F405"]
"python/infinity_sdk/infinity/remote_thrift/infinity_thrift_rpc/*" = ["F403", "F405", "E501"]
"src/embedded_infinity/__init__.py" = ["F403"]

